# e-soh-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pygeoapi-config.yml  pygeoapi-openapi-config.yml  pyproject.toml  var.env
src/esoh/: grpc_provider.py  netcdf_formatter.py
