[build-system]
requires = ["setuptools", "setuptools-scm", "build"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
	"protobuf ~= 4.24.3",
	"grpcio == 1.59.0",
	"covjson-pydantic",
	"geojson-pydantic~=1.0.1",
]
name = "esoh-api"
description = "This project contains source code for the E-SOH datastore API"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "."
